<resources>
    <string name="app_name">ArmContacts</string>
    <string name="loading_please_wait">Loading... Please Wait</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password_reset_here">Forgot Password? Reset here</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="please_re_enter_password">Please Re-Enter Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="list_contacts">List Contacts</string>
    <string name="create_contact">Create Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="contacts">Contacts</string>
    <string name="phone_call">Phone Call</string>
    <string name="send_mail">Send Mail</string>
    <string name="edit_detail">Edit Detail</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_contact">Edit Contact</string>
</resources>