<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactInfoActivity">

        <TextView
            android:id="@+id/tv_ci_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ci_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ci_name" />

        <ImageView
            android:id="@+id/iv_phone_call"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/phone_call"
            android:src="@drawable/ic_call"
            app:layout_constraintEnd_toStartOf="@+id/iv_send_mail"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/tv_ci_phone" />

        <ImageView
            android:id="@+id/iv_send_mail"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/send_mail"
            android:src="@drawable/ic_email"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/iv_phone_call"
            app:layout_constraintTop_toBottomOf="@+id/tv_ci_phone" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/edit_detail"
            android:src="@drawable/ic_edit"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/iv_send_mail"
            app:layout_constraintTop_toBottomOf="@+id/tv_ci_phone" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/delete_contact"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/iv_edit"
            app:layout_constraintTop_toBottomOf="@+id/tv_ci_phone" />

        <EditText
            android:id="@+id/et_ci_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contact_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_phone_call" />

        <EditText
            android:id="@+id/et_ci_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_ci_name" />

        <EditText
            android:id="@+id/et_ci_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contact_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_ci_email" />

        <Button
            android:id="@+id/btn_edit_ci"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/edit_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_ci_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>